--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
@@ -29,6 +31,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/http-status": "^1.1.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "ts-node-dev": "^2.0.0"
   }
 }
