--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run migration:run && node dist/index.js",
+    "start": "npm run migration:run && npm run seed && node dist/src/index.js",
     "dev": "ts-node-dev src/index.ts",
-    "migration:run": "prisma migrate deploy"
+    "migration:run": "prisma migrate deploy",
+    "seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
